--- a/control-plane/ingress-nginx.yaml
+++ b/control-plane/ingress-nginx.yaml
@@ -10,6 +10,6 @@ spec:
       chart: ingress-nginx
       sourceRef:
         kind: HelmRepository
-        name: ingress-nginx
+        name: bitnami
   interval: 1m0s
   targetNamespace: default
