--- a/control-plane/ingress-nginx.yaml
+++ b/control-plane/ingress-nginx.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: ingress-nginx
+      chart: nginx-ingress-controller
       sourceRef:
         kind: HelmRepository
         name: bitnami
