--- a/control-plane/kustomization.yaml
+++ b/control-plane/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-repositories/helmrepository-bitnami.yaml
+  - helm-repositories/helmrepository-jetstack.yaml
   - cert-manager/cert-manager.yaml
   - cert-manager/ca.yaml
   - ingress-nginx.yaml
