--- a/clusters/control-plane/config/kustomization-apps-helm.yaml
+++ b/clusters/control-plane/config/kustomization-apps-helm.yaml
@@ -1,13 +1,13 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: control-plane
+  name: apps-helm-repos
   namespace: flux-system
 spec:
-  interval: 6h
-  path: ./control-plane
-  prune: true
+  interval: 5m
   sourceRef:
     kind: GitRepository
-    name: control-plane
+    name: kubernetes
+  path: ./applications/helm-repositories
+  prune: true
+  validation: client
