--- a/clusters/control-plane/config/kustomization-apps-infrastructure.yaml
+++ b/clusters/control-plane/config/kustomization-apps-infrastructure.yaml
@@ -10,6 +10,6 @@ spec:
   sourceRef:
     kind: GitRepository
     name: kubernetes
-  path: ./applications/infrastructure
+  path: ../applications/infrastructure
   prune: true
   validation: client
