--- a/clusters/control-plane/config/kustomization-configuration-bootstrap.yaml
+++ b/clusters/control-plane/config/kustomization-configuration-bootstrap.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+metadata:
+  name: bootstrap
+  namespace: flux-system
 resources:
   - ./bootstrap/gitrepo.yaml
   - ./bootstrap/configuration.yaml
