changing gitrepo name

--- a/clusters/control-plane/config/kustomization-apps-helm.yaml
+++ b/clusters/control-plane/config/kustomization-apps-helm.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 5m
   sourceRef:
     kind: GitRepository
-    name: kubernetes
+    name: control-plane
   path: ./applications/helm-repositories
   prune: true
   validation: client
