--- a/clusters/control-plane/config/kustomization-apps-infrastructure.yaml
+++ b/clusters/control-plane/config/kustomization-apps-infrastructure.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 5m
   sourceRef:
     kind: GitRepository
-    name: kubernetes
-  path: ../applications/infrastructure
+    name: control-plane
+  path: ./applications/infrastructure
   prune: true
   validation: client
